files/script/test_all_one/parse_error/var/test_var_error1.ll


def main()
{
    var string = 100U12

}
#script("script/test_all/parse_error/var/test_var_error1.ll")